--- a/css/style.css
+++ b/css/style.css
@@ -73,9 +73,9 @@ body {
 
 .certificate-list {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
     flex-wrap: wrap;
-    padding: 2rem 0;
+    padding: 3rem 2rem;
     
 }
 
